Fix: Force shift close

--- a/src/app/features/shifts/shifts.component.scss
+++ b/src/app/features/shifts/shifts.component.scss
@@ -51,3 +51,11 @@
   width: 100%;
 }
 
+.actions-header {
+  text-align: right;
+}
+
+.actions-cell {
+  text-align: right;
+}
+
